<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AVTweetsApp</string>
    <string name="login_label">Connect to Twitter</string>
    <string name="title_activity_timeline">Home Timeline</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_create">Tweet</string>
    <string name="title_activity_post_tweet">Tweet</string>
    <string name="action_settings">Settings</string>
    <string name="action_back">Back</string>
    <string name="SendTweet">Send Tweet</string>
    <string name="MaxMessageSpace">MaxMessageSpace: 140</string>
    <string name="action_notification">Notification</string>
    <string name="user_profile">Profile</string>

    <string name="name">Name</string>
    <string name="tagline">TagLine</string>
    <string name="tweets">Tweets</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="screenname">ScreenName</string>

</resources>